--- a/android/app/src/main/AndroidManifest.xml
+++ b/android/app/src/main/AndroidManifest.xml
@@ -34,6 +34,8 @@
         </activity>
         <!-- Don't delete the meta-data below.
              This is used by the Flutter tool to generate GeneratedPluginRegistrant.java -->
+        <meta-data android:name="com.google.android.geo.API_KEY"
+               android:value="AIzaSyC9d2feHMcfip_GHa6YgM-Pl5oClalCX6E"/>
         <meta-data
             android:name="flutterEmbedding"
             android:value="2" />
