--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -34,6 +34,10 @@ dependencies:
   # The following adds the Cupertino Icons font to your application.
   # Use with the CupertinoIcons class for iOS style icons.
   cupertino_icons: ^1.0.2
+  permission_handler: ^8.1.6
+  google_maps_flutter: ^2.0.6
+  geolocator: ^7.5.0
+  provider: ^6.0.0
 
 dev_dependencies:
   flutter_test:
